# htp4viam

./: .gitignore  README.md  todo.txt
config/: apparatuses.json5  dependencies.json5  device_types.json5  devices.json5  orchestrator.json5  tests.json5
config/robot_cfgs/: fake.json
config/tests/fake_img/: requirements.txt  run.py
docs/: data_output.md
example_config/: apparatuses.json5  dependencies.json5  device_types.json5  devices.json5  orchestrator.json5  tests.json5
example_config/internal/: README.md  snapshots.json5
nginx/: nginx.conf
nixos/: .gitignore  README.md  flake.nix  shell.nix
nixos/hosts/global/: default.nix  locale.nix  nix.nix
nixos/hosts/iso/: default.nix
nixos/hosts/optional/: gui.nix  (+1 more)
nixos/overlays/: default.nix
nixos/scripts/: BuildAndFlashISO.sh  GarbageCollect.sh  NixStoreRepair.sh  ReplaceBinBash.sh  Switch-nixos  Update.sh
nixos/templates/: host.nix  zfs_hw.nix
orchestrator/: Cargo.toml  Dockerfile  README.md  shell.nix
orchestrator/src/: apparatuses.rs  dependencies.rs  device_types.rs  devices.rs  folder.rs  git_test.rs  htp_test.rs  keygen.rs  main.rs  orchestrator.rs  rcfolder.rs  resource_ledger.rs  resources.rs  running_test_map.rs  ssh.rs  statistics.rs  test_queue.rs  tests.rs
orchestrator/src/config/: apparatuses.rs  dependencies.rs  device_types.rs  devices.rs  mod.rs  orchestrator_config.rs  tests.rs
orchestrator/src/environment/: docker.rs  docker2.rs  docker_env.rs  mod.rs
orchestrator/src/stages/: aquiring.rs  mod.rs  preperation.rs  running.rs  termination.rs  validation.rs
scripts/: setup.sh
(+13 files in other folders)
