[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
env_logger = "0.10.0"
git2 = "0.16.1"
json5 = "0.4.1"
log = "0.4.17"
serde = { version = "1.0.157", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }

